log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 07:15:44 PM UTC: 
 tests:  0|6
total_score: 0/70
3e9a827
Thu 30 Mar 2023 01:52:42 AM UTC: 
 arraylist.c | 24 ++++++++++++++++--------
 1 file changed, 16 insertions(+), 8 deletions(-)
 tests:  0|6
total_score: 0/70
e08c053
Thu 30 Mar 2023 01:57:51 AM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a97322d
Thu 30 Mar 2023 02:01:33 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:31: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   18 |   lista->data = (int*) calloc(list->capacity, sizeof(int));
      |                               ^~~~
      |                               lista
arraylist.c:18:31: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
542465d
Thu 30 Mar 2023 02:01:40 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:18:15: error: assignment to ‘void **’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   18 |   lista->data = (int*) calloc(lista->capacity, sizeof(int));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
fc6bb23
Thu 30 Mar 2023 02:02:49 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
12e03d4
Thu 30 Mar 2023 02:32:01 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
362ca90
Thu 30 Mar 2023 02:32:58 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
4e7aad6
Thu 30 Mar 2023 02:41:27 AM UTC: 
 arraylist.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
c2caca9
Thu 30 Mar 2023 02:44:47 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c01cb1b
Thu 30 Mar 2023 02:45:17 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8daca03
Thu 30 Mar 2023 02:46:13 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1038eda
Thu 30 Mar 2023 02:46:40 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
37a042b
Thu 30 Mar 2023 02:48:40 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:31:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   31 |   l->size = data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
5e98227
Thu 30 Mar 2023 02:49:12 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
451dc7a
Thu 30 Mar 2023 02:49:34 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6399d0f
Thu 30 Mar 2023 02:49:55 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4a2c0fc
Thu 30 Mar 2023 02:50:11 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
832e709
Thu 30 Mar 2023 02:50:23 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c36543
Thu 30 Mar 2023 03:23:57 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
db302bc
Thu 30 Mar 2023 03:24:20 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
1a05f72
Thu 30 Mar 2023 03:24:39 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b54369d
Thu 30 Mar 2023 03:27:43 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
23c5280
Thu 30 Mar 2023 03:28:56 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:31:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   31 |   l->size = data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
ec021d4
Thu 30 Mar 2023 03:29:16 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:31:10: error: invalid type argument of ‘->’ (have ‘int’)
   31 |   l->size->data = data;
      |          ^~
Compilation failed
8d3c2d8
Thu 30 Mar 2023 03:29:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:31:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   31 |   l->size = data;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
9626e59
Thu 30 Mar 2023 03:29:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1e0f80c
Thu 30 Mar 2023 03:37:57 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
ecdd90b
Thu 30 Mar 2023 03:38:38 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
dd49e13
Thu 30 Mar 2023 03:39:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5cb326e
Thu 30 Mar 2023 03:42:22 PM UTC: 
 arraylist.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:29:13: error: void value not ignored as it ought to be
   29 |     l->data = (void)realloc(l->data, l->size * sizeof(void));
      |             ^
Compilation failed
35afaac
Thu 30 Mar 2023 03:42:37 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
11f7225
Thu 30 Mar 2023 03:42:50 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5c8f7c2
Thu 30 Mar 2023 03:43:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
53f3927
